:iphone: Make sure pagination fits on mobile

--- a/resources/scss/_base.scss
+++ b/resources/scss/_base.scss
@@ -3,10 +3,3 @@
  * All resets, variables, mixins, and any utility classes.
  */
 
-.content-wide {
-    max-width: 1200px !important;
-}
-
-.container {
-    max-width: 960px !important;
-}
