--- a/resources/scss/_components.scss
+++ b/resources/scss/_components.scss
@@ -6,8 +6,8 @@
 .parallax-header {
     background: #000;
     background: linear-gradient(
-        rgba(0, 0, 0, 0.0),
-        rgba(0, 0, 0, 0.9)
+            rgba(0, 0, 0, 0.0),
+            rgba(0, 0, 0, 0.9)
     ), url('/images/banner1.jpg');
     background-attachment: fixed;
     background-position: center;
@@ -23,10 +23,6 @@
     }
 }
 
-
-.scarf {
-}
-
 #social-links {
     ul {
         list-style: none;
@@ -36,5 +32,35 @@
             padding: 0.7rem;
             display: inline-flex;
         }
+    }
+}
+
+/**
+ * Hide some pagination items on mobile
+ */
+@media screen and (max-width: 575px) {
+    li.page-item {
+        display: none;
+    }
+
+    .page-item:first-child,
+    .page-item:last-child,
+    .page-item:nth-child(2),
+    .page-item:nth-last-child(2),
+    .page-item:nth-child(3),
+    .page-item:nth-last-child(3),
+    .page-item.active,
+    .page-item.disabled {
+        display: block;
+    }
+}
+
+@media screen and (min-width: 400px) {
+    // Note: there is currently no browser support for this rule yet
+    li.page-item:has(+ .active) {
+        display: block;
+    }
+    .page-item.active + li {
+        display: block;
     }
 }
