--- a/resources/scss/_layout.scss
+++ b/resources/scss/_layout.scss
@@ -6,3 +6,11 @@
 body {
     background-color: lightgray;
 }
+
+.content-wide {
+    max-width: 1200px !important;
+}
+
+.container {
+    max-width: 960px !important;
+}
